refactor: reorganize desktop client modules